# external.qemu

./: Makefile  Makefile.hw  Makefile.objs  Makefile.target  NOTICE  arch_init.c  arch_init.h  blockdev.c  config.h  configure  console.h  cpu-defs.h  cpu-exec.c  cpus.c  exec-all.h  exec.c  input.c  kvm-all.c  kvm.h  os-win32.c  oslib-posix.c  oslib-win32.c  project.config  qemu-char.c  qemu-common.h  qemu-options.hx  qemu-sockets.c  qemu_configure.sh  qemu_socket.h  savevm.c  sdb.c  sdb.h  softmmu_template.h  sysemu.h  vl.c  vl.h
tizen/: AUTHOR  COPYING  Makefile.in  README  build.sh  configure.ac
tizen/data/: sdcard_1024.img  sdcard_1536.img  sdcard_512.img
tizen/distrib/ffmpeg/: tizen_configure
tizen/distrib/ffmpeg/include/libavcodec/: avcodec.h
tizen/distrib/ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswscale.pc
tizen/distrib/ffmpeg/libavformat/: cutils.c  internal.h  utils.c
tizen/license/: Open_Source_Announcement.txt
tizen/skins/emul_320x480/: default.dbi
tizen/skins/emul_3keys_320x480/: default.dbi
tizen/skins/emul_3keys_480x800/: default.dbi
tizen/skins/emul_3keys_600x1024/: default.dbi
tizen/skins/emul_3keys_720x1280/: default.dbi
tizen/skins/emul_480x800/: default.dbi
tizen/skins/emul_600x1024/: default.dbi
tizen/skins/emul_720x1280/: default.dbi
tizen/src/: .gitignore  DEBUGCH  Makefile.in  Makefile_win32  NOTICE  VERSION  about_version.h  arch_arm.c  arch_x86.c  command.c  command.h  config_dbg_x86.ini  config_x86.ini  configuration.c  configuration.h  dbi_parser.c  dbi_parser.h  debug_ch.c  debug_ch.h  debug_ch_vtm.c  defines.h  dialog.c  dialog.h  emul_debug.bat  emul_debug.sh  emulator.c  emulator.h  emulator.sh  emulator.sh.old  emulsignal.c  emulsignal.h  event_handler.c  event_handler.h  extern.h  fileio.c  fileio.h  menu.c  menu.h  menu_callback.c  menu_callback.h  (+23 more)
tizen/src/hw/: brightness.c  maru_codec.c  maru_codec.h  maru_pm.c  maru_pm.h  maru_touchscreen.c  overlay.c  svcamera.h  svcamera_linux.c  svcamera_pci.c  svcamera_win32.c  tizen-ac97.c  tizen-board.c
tizen/src/hw/camera_win32_dll/hwcfilter/: hwcfilter.sln
tizen/src/hw/camera_win32_dll/hwcfilter/hwcfilter/: ReadMe.txt  hwccallback_h.h  hwcfilter.cpp  hwcfilter.def  hwcfilter.h  hwcfilter.vcxproj  hwcfilter.vcxproj.filters  hwcfilter_h.h  hwcsp.cpp  hwcsp.h  (+1 more)
(+170 files in other folders)
